fix: stage 5 - Aumento do gap dos elementos no SignUp Form

--- a/src/views/SignUpPage/styles.css
+++ b/src/views/SignUpPage/styles.css
@@ -14,7 +14,7 @@
     padding-inline: 30px;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 45px;
     flex-wrap: wrap;
     /* Não tirar */
     flex: 1;
@@ -27,7 +27,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    /* align-items: center; */
     flex: 1;
     flex-wrap: wrap;
     position: sticky;
@@ -44,7 +43,6 @@
 
 .div-titulo, .div-rodape{
     height: 50%;
-    /* flex-shrink: 1; */
 }
 
 .div-titulo{
